<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Ui.YourHealthOld.YourHealthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/your_health"
            android:textColor="@color/_010101"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.bmi.CustomView.BmiClock
        android:id="@+id/bmiClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/cstHeader" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/lll2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bmiClock"
        app:layout_constraintBottom_toTopOf="@+id/llbtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvYourBmiIs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/your_bmi_is"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBmiIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="23.4"
                android:textAlignment="center"
                android:textColor="@color/_00ad50"
                android:textSize="64sp"
                app:layout_constraintTop_toBottomOf="@+id/tvYourBmiIs" />

            <TextView
                android:id="@+id/tvYourEvaluate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/you_are_healthy"
                android:textAlignment="center"
                android:textColor="@color/_00ad50"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/tvBmiIndex" />

            <TextView
                android:id="@+id/yourProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_regular"
                android:textAlignment="center"
                android:textColor="@color/cc010101"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tvYourEvaluate" />

            <TextView
                android:id="@+id/yourWeightAndHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_regular"
                android:textAlignment="center"
                android:textColor="@color/cc010101"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/yourProfile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/yourWeightAndHeight">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cstUnderWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp">

                    <ImageView
                        android:id="@+id/imgUnderWeight"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_underweight"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:background="@color/transparent"
                        android:id="@+id/tvUnderWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:paddingLeft="6dp"
                        android:text="@string/underweight"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/imgUnderWeight"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvUnderWeightIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/_18_5"
                        android:background="@color/transparent"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cstNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp">

                    <ImageView
                        android:id="@+id/imgNormal"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvnormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:paddingLeft="6dp"
                        android:text="@string/normal"
                        android:background="@color/transparent"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/imgNormal"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvnormalIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/_18_5_26_3"
                        android:textSize="16sp"
                        android:background="@color/transparent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cstOverweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp">

                    <ImageView
                        android:id="@+id/imgOverweight"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/ic_overweight"
                        android:background="@color/transparent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvOverWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:paddingLeft="6dp"
                        android:text="@string/overweight"
                        android:textSize="16sp"
                        android:background="@color/transparent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/imgOverweight"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvOverWeightIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/_26_4_29_7"
                        android:textSize="16sp"
                        android:background="@color/transparent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cstObese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp">

                    <ImageView
                        android:id="@+id/imgObese"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_obese"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvObese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:paddingLeft="6dp"
                        android:text="@string/obese"
                        android:background="@color/transparent"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/imgObese"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvObeseIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/_29_8"
                        android:textSize="16sp"
                        android:background="@color/transparent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lll2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20sp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8sp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_viewreport"
            android:fontFamily="@font/inter_bold"
            android:text="@string/view_report"
            android:textAllCaps="false"
            android:textColor="#F96525"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_weight="1"
            android:background="@drawable/custom_background_button"
            android:fontFamily="@font/inter_bold"
            android:text="@string/chat_with_consultant"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>