<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustResize">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/editLayout"
        android:layout_marginBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/editLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/editTextUserInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="4"
            android:background="@drawable/bg_edit_text_off"
            android:drawablePadding="20dp"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/enter_your_question"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="5dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:textColor="@color/_010101"
            android:textColorHint="#8C808080"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/actionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_send_ai_off" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/inter_bold"
        android:text="@string/start_conversation"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/editLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>